# XIM

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy.ps1  jax_plugin.py  plan.md  setup.ps1  test_500m.py  test_ffi.py  test_jax_250m.py  xim_torch.py
.github/workflows/: build.yml  winget-release.yml
manifests/turtle170/XIM/0.1.0/: turtle170.XIM.installer.yaml  turtle170.XIM.locale.en-US.yaml  turtle170.XIM.yaml
src/: aot.rs  autograd.rs  error.rs  executor.rs  ffi.rs  ir.rs  jit.rs  lib.rs  main.rs  mmap_loader.rs  pipeline.rs  planner.rs  quant.rs
tests/: stress_test.rs
