[package]
name = "xim"
version = "0.1.0"
edition = "2024"

[lib]
name = "xim"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.102"
bincode = "1.3.3"
serde = { version = "1.0.228", features = ["derive"] }
pyo3 = { version = "0.23.4", features = ["extension-module"] }
numpy = "0.23.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
rayon = "1.12.0"
memmap2 = "0.9.10"
rand = "0.10.1"
libloading = "0.9.0"
crossbeam-channel = "0.5.15"
cranelift = "0.131.1"
cranelift-module = "0.131.1"
cranelift-jit = "0.131.1"
cranelift-native = "0.131.1"

